# moondream.rs

./: Cargo.toml  README.md  rustfmt.toml
examples/: core.rs
src/: common.rs  lib.rs  moondream.rs
