[package]
name = "moondream"
version = "0.1.0"
edition = "2021"
description = "rust sdk for moondream"
authors = ["Yazalde Filimone <yazaldefilimon@gmail.com>"]
repository = "https://github.com/yazaldefilimone/moondream.rs"
license = "Apache-2.0"
[dependencies]
async-trait = "0.1.88"
base64 = "0.22.1"
bytes = "1.10.1"
futures-util = "0.3.31"
image = "0.25.6"
reqwest = { version = "0.12.15", features = ["json", "multipart", "stream"] }

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"

[dev-dependencies]
tokio = { version = "1.45.0", features = ["full"] }
